--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "webpack-dev-server --mode development"
   },
   "devDependencies": {
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
