--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "vue": "^2.5.22"
   }
 }
