--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "sample-03",
+  "name": "webpack_starter",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "clean": "rm -rf ./dist",
-    "build": "webpack --mode development",
-    "start": "webpack-dev-server --mode development"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/barlowm/WebpackStarter.git"
   },
-  "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
-  }
+  "keywords": [
+    "webpack",
+    "vuejs"
+  ],
+  "author": "Mike Barlow <barlowm@gmail.com> (http://mwbarlow.com)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/barlowm/WebpackStarter/issues"
+  },
+  "homepage": "https://github.com/barlowm/WebpackStarter#readme"
 }
