--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sample-03",
-  "version": "1.0.0",
+  "name": "webpack_starter",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "clean": "rm -rf ./dist",
@@ -15,5 +15,19 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/barlowm/WebpackStarter.git"
+  },
+  "keywords": [
+    "webpack",
+    "vuejs"
+  ],
+  "author": "Mike Barlow <barlowm@gmail.com> (http://mwbarlow.com)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/barlowm/WebpackStarter/issues"
+  },
+  "homepage": "https://github.com/barlowm/WebpackStarter#readme"
 }
