--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack_starter",
   "version": "1.3.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "webpack --mode development",
